--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+    "lucide-react": "^0.269.0"
+
   },
   "pnpm": {
     "overrides": {
