--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "eslint-config-next": "15.2.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
     "lucide-react": "^0.269.0"
   },
   "pnpm": {
