--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,2 @@
-Api-Key:qqttx8cimje2yucn4hphhlvwwwutnnqh
-Secret-Key:nwkqyxy3de61qpfduvd8fwdn
+STEADFAST_API_KEY=qqttx8cimje2yucn4hphhlvwwwutnnqh 
+STEADFAST_SECRET_KEY=nwkqyxy3de61qpfduvd8fwdn 
