--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.8.4",
     "firebase": "11.6.0",
     "next": "15.2.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -21,10 +22,10 @@
     "@types/react-dom": "19.0.4",
     "eslint": "^9",
     "eslint-config-next": "15.2.0",
+    "lucide-react": "^0.269.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5",
-    "lucide-react": "^0.269.0"
+    "typescript": "^5"
   },
   "pnpm": {
     "overrides": {
