--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "firebase": "11.6.0",
     "next": "15.2.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
+    "react-qr-code": "^2.0.15"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
